// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`blogTree > renders with date, author, and a few tags 1`] = `
{
  "props": {
    "children": [
      {
        "props": {
          "children": undefined,
          "style": {
            "background": "#00C9A7",
            "height": "3px",
            "left": 0,
            "opacity": 0.6,
            "position": "absolute",
            "top": 0,
            "width": "1200px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "height": 64,
                "src": "logo://stub",
                "style": {
                  "height": 64,
                  "width": 64,
                },
                "width": 64,
              },
              "type": "img",
            },
            {
              "props": {
                "children": "Cycles",
                "style": {
                  "color": "#FFFFFF",
                  "display": "flex",
                  "fontFamily": "Inter",
                  "fontSize": "44px",
                  "fontWeight": 700,
                  "letterSpacing": "-0.02em",
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "alignItems": "center",
            "display": "flex",
            "gap": "18px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": undefined,
          "style": {
            "background": "#3C3C43",
            "height": "1px",
            "marginTop": "24px",
            "width": "100%",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "children": undefined,
                "style": {
                  "background": "#00C9A7",
                  "height": "4px",
                  "marginBottom": "28px",
                  "width": "72px",
                },
              },
              "type": "div",
            },
            {
              "props": {
                "children": "A reasonably long blog post title that exercises sizing",
                "style": {
                  "color": "#FFFFFF",
                  "fontFamily": "Inter",
                  "fontSize": "56px",
                  "fontWeight": 700,
                  "letterSpacing": "-0.02em",
                  "lineHeight": 1.15,
                },
              },
              "type": "div",
            },
            {
              "props": {
                "children": [
                  {
                    "props": {
                      "children": "#agents",
                      "style": {
                        "alignItems": "center",
                        "background": "rgba(0, 201, 167, 0.12)",
                        "border": "1px solid rgba(0, 201, 167, 0.4)",
                        "borderRadius": "18px",
                        "color": "#00C9A7",
                        "display": "flex",
                        "fontFamily": "Inter",
                        "fontSize": "15px",
                        "fontWeight": 700,
                        "height": "36px",
                        "letterSpacing": "0.01em",
                        "marginRight": "12px",
                        "padding": "0 18px",
                      },
                    },
                    "type": "div",
                  },
                  {
                    "props": {
                      "children": "#governance",
                      "style": {
                        "alignItems": "center",
                        "background": "rgba(0, 201, 167, 0.12)",
                        "border": "1px solid rgba(0, 201, 167, 0.4)",
                        "borderRadius": "18px",
                        "color": "#00C9A7",
                        "display": "flex",
                        "fontFamily": "Inter",
                        "fontSize": "15px",
                        "fontWeight": 700,
                        "height": "36px",
                        "letterSpacing": "0.01em",
                        "marginRight": "12px",
                        "padding": "0 18px",
                      },
                    },
                    "type": "div",
                  },
                ],
                "style": {
                  "display": "flex",
                  "flexWrap": "wrap",
                  "marginTop": "28px",
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "display": "flex",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
            "maxWidth": "1072px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "children": "2026-05-02  ·  Albert Mavashev",
                "style": {
                  "color": "#AEAEB2",
                  "display": "flex",
                  "fontFamily": "Inter",
                  "fontSize": "22px",
                  "fontWeight": 400,
                },
              },
              "type": "div",
            },
            {
              "props": {
                "children": "runcycles.io",
                "style": {
                  "color": "#8E8E93",
                  "display": "flex",
                  "fontFamily": "Inter",
                  "fontSize": "22px",
                  "fontWeight": 400,
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-between",
          },
        },
        "type": "div",
      },
    ],
    "style": {
      "background": "#1B1B1F",
      "color": "#FFFFFF",
      "display": "flex",
      "flexDirection": "column",
      "fontFamily": "Inter",
      "height": "630px",
      "padding": "56px 64px",
      "position": "relative",
      "width": "1200px",
    },
  },
  "type": "div",
}
`;

exports[`blogTree > renders with no tags 1`] = `
{
  "props": {
    "children": [
      {
        "props": {
          "children": undefined,
          "style": {
            "background": "#00C9A7",
            "height": "3px",
            "left": 0,
            "opacity": 0.6,
            "position": "absolute",
            "top": 0,
            "width": "1200px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "height": 64,
                "src": "logo://stub",
                "style": {
                  "height": 64,
                  "width": 64,
                },
                "width": 64,
              },
              "type": "img",
            },
            {
              "props": {
                "children": "Cycles",
                "style": {
                  "color": "#FFFFFF",
                  "display": "flex",
                  "fontFamily": "Inter",
                  "fontSize": "44px",
                  "fontWeight": 700,
                  "letterSpacing": "-0.02em",
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "alignItems": "center",
            "display": "flex",
            "gap": "18px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": undefined,
          "style": {
            "background": "#3C3C43",
            "height": "1px",
            "marginTop": "24px",
            "width": "100%",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "children": undefined,
                "style": {
                  "background": "#00C9A7",
                  "height": "4px",
                  "marginBottom": "28px",
                  "width": "72px",
                },
              },
              "type": "div",
            },
            {
              "props": {
                "children": "Short",
                "style": {
                  "color": "#FFFFFF",
                  "fontFamily": "Inter",
                  "fontSize": "72px",
                  "fontWeight": 700,
                  "letterSpacing": "-0.02em",
                  "lineHeight": 1.15,
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "display": "flex",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
            "maxWidth": "1072px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "children": "2026-05-02  ·  Cycles Team",
                "style": {
                  "color": "#AEAEB2",
                  "display": "flex",
                  "fontFamily": "Inter",
                  "fontSize": "22px",
                  "fontWeight": 400,
                },
              },
              "type": "div",
            },
            {
              "props": {
                "children": "runcycles.io",
                "style": {
                  "color": "#8E8E93",
                  "display": "flex",
                  "fontFamily": "Inter",
                  "fontSize": "22px",
                  "fontWeight": 400,
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-between",
          },
        },
        "type": "div",
      },
    ],
    "style": {
      "background": "#1B1B1F",
      "color": "#FFFFFF",
      "display": "flex",
      "flexDirection": "column",
      "fontFamily": "Inter",
      "height": "630px",
      "padding": "56px 64px",
      "position": "relative",
      "width": "1200px",
    },
  },
  "type": "div",
}
`;

exports[`docsTree > renders with section eyebrow and description 1`] = `
{
  "props": {
    "children": [
      {
        "props": {
          "children": undefined,
          "style": {
            "background": "#00C9A7",
            "height": "3px",
            "left": 0,
            "opacity": 0.6,
            "position": "absolute",
            "top": 0,
            "width": "1200px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "height": 64,
                "src": "logo://stub",
                "style": {
                  "height": 64,
                  "width": 64,
                },
                "width": 64,
              },
              "type": "img",
            },
            {
              "props": {
                "children": "Cycles",
                "style": {
                  "color": "#FFFFFF",
                  "display": "flex",
                  "fontFamily": "Inter",
                  "fontSize": "44px",
                  "fontWeight": 700,
                  "letterSpacing": "-0.02em",
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "alignItems": "center",
            "display": "flex",
            "gap": "18px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": undefined,
          "style": {
            "background": "#3C3C43",
            "height": "1px",
            "marginTop": "24px",
            "width": "100%",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "children": "HOW-TO GUIDE",
                "style": {
                  "color": "#00C9A7",
                  "display": "flex",
                  "fontFamily": "Inter",
                  "fontSize": "16px",
                  "fontWeight": 700,
                  "letterSpacing": "0.18em",
                  "marginBottom": "20px",
                  "textTransform": "uppercase",
                },
              },
              "type": "div",
            },
            {
              "props": {
                "children": undefined,
                "style": {
                  "background": "#00C9A7",
                  "height": "4px",
                  "marginBottom": "28px",
                  "width": "72px",
                },
              },
              "type": "div",
            },
            {
              "props": {
                "children": "How to wire a tenant policy",
                "style": {
                  "color": "#FFFFFF",
                  "fontFamily": "Inter",
                  "fontSize": "60px",
                  "fontWeight": 700,
                  "letterSpacing": "-0.02em",
                  "lineHeight": 1.15,
                },
              },
              "type": "div",
            },
            {
              "props": {
                "children": "Step-by-step guide for configuring tenant-scoped policies with the admin API.",
                "style": {
                  "color": "#AEAEB2",
                  "fontFamily": "Inter",
                  "fontSize": "24px",
                  "fontWeight": 400,
                  "lineHeight": 1.4,
                  "marginTop": "20px",
                  "maxHeight": "70px",
                  "overflow": "hidden",
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "display": "flex",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
            "maxWidth": "1072px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "children": "runcycles.io",
                "style": {
                  "color": "#8E8E93",
                  "display": "flex",
                  "fontFamily": "Inter",
                  "fontSize": "22px",
                  "fontWeight": 400,
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "flex-end",
          },
        },
        "type": "div",
      },
    ],
    "style": {
      "background": "#1B1B1F",
      "color": "#FFFFFF",
      "display": "flex",
      "flexDirection": "column",
      "fontFamily": "Inter",
      "height": "630px",
      "padding": "56px 64px",
      "position": "relative",
      "width": "1200px",
    },
  },
  "type": "div",
}
`;

exports[`docsTree > renders without a section (top-level docs) 1`] = `
{
  "props": {
    "children": [
      {
        "props": {
          "children": undefined,
          "style": {
            "background": "#00C9A7",
            "height": "3px",
            "left": 0,
            "opacity": 0.6,
            "position": "absolute",
            "top": 0,
            "width": "1200px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "height": 64,
                "src": "logo://stub",
                "style": {
                  "height": 64,
                  "width": 64,
                },
                "width": 64,
              },
              "type": "img",
            },
            {
              "props": {
                "children": "Cycles",
                "style": {
                  "color": "#FFFFFF",
                  "display": "flex",
                  "fontFamily": "Inter",
                  "fontSize": "44px",
                  "fontWeight": 700,
                  "letterSpacing": "-0.02em",
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "alignItems": "center",
            "display": "flex",
            "gap": "18px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": undefined,
          "style": {
            "background": "#3C3C43",
            "height": "1px",
            "marginTop": "24px",
            "width": "100%",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "children": undefined,
                "style": {
                  "background": "#00C9A7",
                  "height": "4px",
                  "marginBottom": "28px",
                  "width": "72px",
                },
              },
              "type": "div",
            },
            {
              "props": {
                "children": "Why Cycles",
                "style": {
                  "color": "#FFFFFF",
                  "fontFamily": "Inter",
                  "fontSize": "72px",
                  "fontWeight": 700,
                  "letterSpacing": "-0.02em",
                  "lineHeight": 1.15,
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "display": "flex",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
            "maxWidth": "1072px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "children": "runcycles.io",
                "style": {
                  "color": "#8E8E93",
                  "display": "flex",
                  "fontFamily": "Inter",
                  "fontSize": "22px",
                  "fontWeight": 400,
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "flex-end",
          },
        },
        "type": "div",
      },
    ],
    "style": {
      "background": "#1B1B1F",
      "color": "#FFFFFF",
      "display": "flex",
      "flexDirection": "column",
      "fontFamily": "Inter",
      "height": "630px",
      "padding": "56px 64px",
      "position": "relative",
      "width": "1200px",
    },
  },
  "type": "div",
}
`;

exports[`toolTree > renders pill without caption 1`] = `
{
  "props": {
    "children": [
      {
        "props": {
          "children": undefined,
          "style": {
            "background": "#00C9A7",
            "height": "3px",
            "left": 0,
            "opacity": 0.6,
            "position": "absolute",
            "top": 0,
            "width": "1200px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "height": 64,
                "src": "logo://stub",
                "style": {
                  "height": 64,
                  "width": 64,
                },
                "width": 64,
              },
              "type": "img",
            },
            {
              "props": {
                "children": "Cycles",
                "style": {
                  "color": "#FFFFFF",
                  "display": "flex",
                  "fontFamily": "Inter",
                  "fontSize": "44px",
                  "fontWeight": 700,
                  "letterSpacing": "-0.02em",
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "alignItems": "center",
            "display": "flex",
            "gap": "18px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": undefined,
          "style": {
            "background": "#3C3C43",
            "height": "1px",
            "marginTop": "24px",
            "width": "100%",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "children": [
                  {
                    "props": {
                      "children": "CALCULATOR",
                      "style": {
                        "color": "#00C9A7",
                        "display": "flex",
                        "fontFamily": "Inter",
                        "fontSize": "16px",
                        "fontWeight": 700,
                        "letterSpacing": "0.18em",
                        "marginBottom": "20px",
                        "textTransform": "uppercase",
                      },
                    },
                    "type": "div",
                  },
                  {
                    "props": {
                      "children": undefined,
                      "style": {
                        "background": "#00C9A7",
                        "height": "4px",
                        "marginBottom": "28px",
                        "width": "72px",
                      },
                    },
                    "type": "div",
                  },
                  {
                    "props": {
                      "children": "T",
                      "style": {
                        "color": "#FFFFFF",
                        "fontFamily": "Inter",
                        "fontSize": "56px",
                        "fontWeight": 700,
                        "letterSpacing": "-0.02em",
                        "lineHeight": 1.1,
                      },
                    },
                    "type": "div",
                  },
                ],
                "style": {
                  "display": "flex",
                  "flexDirection": "column",
                  "width": "600px",
                },
              },
              "type": "div",
            },
            {
              "props": {
                "children": [
                  {
                    "props": {
                      "children": [
                        {
                          "props": {
                            "children": "×2",
                            "style": {
                              "alignItems": "center",
                              "background": "rgba(245, 158, 11, 0.18)",
                              "border": "1px solid rgba(245, 158, 11, 0.55)",
                              "borderRadius": "20px",
                              "color": "#F59E0B",
                              "display": "flex",
                              "fontFamily": "Inter",
                              "fontSize": "20px",
                              "fontWeight": 700,
                              "height": "40px",
                              "letterSpacing": "0.01em",
                              "padding": "0 18px",
                            },
                          },
                          "type": "div",
                        },
                      ],
                      "style": {
                        "alignItems": "flex-end",
                        "alignSelf": "flex-end",
                        "display": "flex",
                        "flexDirection": "column",
                        "marginBottom": "14px",
                      },
                    },
                    "type": "div",
                  },
                  {
                    "props": {
                      "children": "$1",
                      "style": {
                        "color": "#00C9A7",
                        "fontFamily": "Inter",
                        "fontSize": "124px",
                        "fontWeight": 700,
                        "letterSpacing": "-0.03em",
                        "lineHeight": 1,
                      },
                    },
                    "type": "div",
                  },
                  {
                    "props": {
                      "children": "x",
                      "style": {
                        "color": "#AEAEB2",
                        "fontFamily": "Inter",
                        "fontSize": "20px",
                        "fontWeight": 400,
                        "lineHeight": 1.3,
                        "marginTop": "16px",
                        "maxWidth": "380px",
                      },
                    },
                    "type": "div",
                  },
                ],
                "style": {
                  "background": "rgba(0, 201, 167, 0.06)",
                  "border": "1px solid #2C2C33",
                  "borderRadius": "16px",
                  "display": "flex",
                  "flexDirection": "column",
                  "padding": "36px 40px",
                  "width": "440px",
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "alignItems": "center",
            "display": "flex",
            "flex": 1,
            "flexDirection": "row",
            "gap": "40px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "children": "runcycles.io",
                "style": {
                  "color": "#8E8E93",
                  "display": "flex",
                  "fontFamily": "Inter",
                  "fontSize": "22px",
                  "fontWeight": 400,
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "flex-end",
          },
        },
        "type": "div",
      },
    ],
    "style": {
      "background": "#1B1B1F",
      "color": "#FFFFFF",
      "display": "flex",
      "flexDirection": "column",
      "fontFamily": "Inter",
      "height": "630px",
      "padding": "56px 64px",
      "position": "relative",
      "width": "1200px",
    },
  },
  "type": "div",
}
`;

exports[`toolTree > renders the full tool template with pill, pillCaption, and hook 1`] = `
{
  "props": {
    "children": [
      {
        "props": {
          "children": undefined,
          "style": {
            "background": "#00C9A7",
            "height": "3px",
            "left": 0,
            "opacity": 0.6,
            "position": "absolute",
            "top": 0,
            "width": "1200px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "height": 64,
                "src": "logo://stub",
                "style": {
                  "height": 64,
                  "width": 64,
                },
                "width": 64,
              },
              "type": "img",
            },
            {
              "props": {
                "children": "Cycles",
                "style": {
                  "color": "#FFFFFF",
                  "display": "flex",
                  "fontFamily": "Inter",
                  "fontSize": "44px",
                  "fontWeight": 700,
                  "letterSpacing": "-0.02em",
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "alignItems": "center",
            "display": "flex",
            "gap": "18px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": undefined,
          "style": {
            "background": "#3C3C43",
            "height": "1px",
            "marginTop": "24px",
            "width": "100%",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "children": [
                  {
                    "props": {
                      "children": "CALCULATOR",
                      "style": {
                        "color": "#00C9A7",
                        "display": "flex",
                        "fontFamily": "Inter",
                        "fontSize": "16px",
                        "fontWeight": 700,
                        "letterSpacing": "0.18em",
                        "marginBottom": "20px",
                        "textTransform": "uppercase",
                      },
                    },
                    "type": "div",
                  },
                  {
                    "props": {
                      "children": undefined,
                      "style": {
                        "background": "#00C9A7",
                        "height": "4px",
                        "marginBottom": "28px",
                        "width": "72px",
                      },
                    },
                    "type": "div",
                  },
                  {
                    "props": {
                      "children": "AI Agent Blast Radius Risk Calculator",
                      "style": {
                        "color": "#FFFFFF",
                        "fontFamily": "Inter",
                        "fontSize": "44px",
                        "fontWeight": 700,
                        "letterSpacing": "-0.02em",
                        "lineHeight": 1.1,
                      },
                    },
                    "type": "div",
                  },
                  {
                    "props": {
                      "children": "Model your agent. See the monthly blast radius. Share the URL.",
                      "style": {
                        "color": "#AEAEB2",
                        "fontFamily": "Inter",
                        "fontSize": "22px",
                        "fontWeight": 400,
                        "lineHeight": 1.4,
                        "marginTop": "36px",
                      },
                    },
                    "type": "div",
                  },
                ],
                "style": {
                  "display": "flex",
                  "flexDirection": "column",
                  "width": "600px",
                },
              },
              "type": "div",
            },
            {
              "props": {
                "children": [
                  {
                    "props": {
                      "children": [
                        {
                          "props": {
                            "children": "×14",
                            "style": {
                              "alignItems": "center",
                              "background": "rgba(245, 158, 11, 0.18)",
                              "border": "1px solid rgba(245, 158, 11, 0.55)",
                              "borderRadius": "20px",
                              "color": "#F59E0B",
                              "display": "flex",
                              "fontFamily": "Inter",
                              "fontSize": "20px",
                              "fontWeight": 700,
                              "height": "40px",
                              "letterSpacing": "0.01em",
                              "padding": "0 18px",
                            },
                          },
                          "type": "div",
                        },
                        {
                          "props": {
                            "children": "catastrophic",
                            "style": {
                              "color": "#F59E0B",
                              "fontFamily": "Inter",
                              "fontSize": "13px",
                              "fontWeight": 700,
                              "letterSpacing": "0.18em",
                              "marginTop": "6px",
                              "textTransform": "uppercase",
                            },
                          },
                          "type": "div",
                        },
                      ],
                      "style": {
                        "alignItems": "flex-end",
                        "alignSelf": "flex-end",
                        "display": "flex",
                        "flexDirection": "column",
                        "marginBottom": "14px",
                      },
                    },
                    "type": "div",
                  },
                  {
                    "props": {
                      "children": "$342K",
                      "style": {
                        "color": "#00C9A7",
                        "fontFamily": "Inter",
                        "fontSize": "124px",
                        "fontWeight": 700,
                        "letterSpacing": "-0.03em",
                        "lineHeight": 1,
                      },
                    },
                    "type": "div",
                  },
                  {
                    "props": {
                      "children": "monthly blast radius — default workload",
                      "style": {
                        "color": "#AEAEB2",
                        "fontFamily": "Inter",
                        "fontSize": "20px",
                        "fontWeight": 400,
                        "lineHeight": 1.3,
                        "marginTop": "16px",
                        "maxWidth": "380px",
                      },
                    },
                    "type": "div",
                  },
                ],
                "style": {
                  "background": "rgba(0, 201, 167, 0.06)",
                  "border": "1px solid #2C2C33",
                  "borderRadius": "16px",
                  "display": "flex",
                  "flexDirection": "column",
                  "padding": "36px 40px",
                  "width": "440px",
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "alignItems": "center",
            "display": "flex",
            "flex": 1,
            "flexDirection": "row",
            "gap": "40px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "children": "runcycles.io",
                "style": {
                  "color": "#8E8E93",
                  "display": "flex",
                  "fontFamily": "Inter",
                  "fontSize": "22px",
                  "fontWeight": 400,
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "flex-end",
          },
        },
        "type": "div",
      },
    ],
    "style": {
      "background": "#1B1B1F",
      "color": "#FFFFFF",
      "display": "flex",
      "flexDirection": "column",
      "fontFamily": "Inter",
      "height": "630px",
      "padding": "56px 64px",
      "position": "relative",
      "width": "1200px",
    },
  },
  "type": "div",
}
`;

exports[`toolTree > renders without pill (no pill = no caption either) 1`] = `
{
  "props": {
    "children": [
      {
        "props": {
          "children": undefined,
          "style": {
            "background": "#00C9A7",
            "height": "3px",
            "left": 0,
            "opacity": 0.6,
            "position": "absolute",
            "top": 0,
            "width": "1200px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "height": 64,
                "src": "logo://stub",
                "style": {
                  "height": 64,
                  "width": 64,
                },
                "width": 64,
              },
              "type": "img",
            },
            {
              "props": {
                "children": "Cycles",
                "style": {
                  "color": "#FFFFFF",
                  "display": "flex",
                  "fontFamily": "Inter",
                  "fontSize": "44px",
                  "fontWeight": 700,
                  "letterSpacing": "-0.02em",
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "alignItems": "center",
            "display": "flex",
            "gap": "18px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": undefined,
          "style": {
            "background": "#3C3C43",
            "height": "1px",
            "marginTop": "24px",
            "width": "100%",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "children": [
                  {
                    "props": {
                      "children": "CALCULATOR",
                      "style": {
                        "color": "#00C9A7",
                        "display": "flex",
                        "fontFamily": "Inter",
                        "fontSize": "16px",
                        "fontWeight": 700,
                        "letterSpacing": "0.18em",
                        "marginBottom": "20px",
                        "textTransform": "uppercase",
                      },
                    },
                    "type": "div",
                  },
                  {
                    "props": {
                      "children": undefined,
                      "style": {
                        "background": "#00C9A7",
                        "height": "4px",
                        "marginBottom": "28px",
                        "width": "72px",
                      },
                    },
                    "type": "div",
                  },
                  {
                    "props": {
                      "children": "Some Tool",
                      "style": {
                        "color": "#FFFFFF",
                        "fontFamily": "Inter",
                        "fontSize": "56px",
                        "fontWeight": 700,
                        "letterSpacing": "-0.02em",
                        "lineHeight": 1.1,
                      },
                    },
                    "type": "div",
                  },
                ],
                "style": {
                  "display": "flex",
                  "flexDirection": "column",
                  "width": "600px",
                },
              },
              "type": "div",
            },
            {
              "props": {
                "children": [
                  {
                    "props": {
                      "children": "$10K",
                      "style": {
                        "color": "#00C9A7",
                        "fontFamily": "Inter",
                        "fontSize": "124px",
                        "fontWeight": 700,
                        "letterSpacing": "-0.03em",
                        "lineHeight": 1,
                      },
                    },
                    "type": "div",
                  },
                  {
                    "props": {
                      "children": "monthly cost",
                      "style": {
                        "color": "#AEAEB2",
                        "fontFamily": "Inter",
                        "fontSize": "20px",
                        "fontWeight": 400,
                        "lineHeight": 1.3,
                        "marginTop": "16px",
                        "maxWidth": "380px",
                      },
                    },
                    "type": "div",
                  },
                ],
                "style": {
                  "background": "rgba(0, 201, 167, 0.06)",
                  "border": "1px solid #2C2C33",
                  "borderRadius": "16px",
                  "display": "flex",
                  "flexDirection": "column",
                  "padding": "36px 40px",
                  "width": "440px",
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "alignItems": "center",
            "display": "flex",
            "flex": 1,
            "flexDirection": "row",
            "gap": "40px",
          },
        },
        "type": "div",
      },
      {
        "props": {
          "children": [
            {
              "props": {
                "children": "runcycles.io",
                "style": {
                  "color": "#8E8E93",
                  "display": "flex",
                  "fontFamily": "Inter",
                  "fontSize": "22px",
                  "fontWeight": 400,
                },
              },
              "type": "div",
            },
          ],
          "style": {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "flex-end",
          },
        },
        "type": "div",
      },
    ],
    "style": {
      "background": "#1B1B1F",
      "color": "#FFFFFF",
      "display": "flex",
      "flexDirection": "column",
      "fontFamily": "Inter",
      "height": "630px",
      "padding": "56px 64px",
      "position": "relative",
      "width": "1200px",
    },
  },
  "type": "div",
}
`;
